feat: adding manage profile/account for staff/admin/breeder and add verify roles
