# user-service/router/user.js
@@ -1,8 +1,11 @@
 const express = require('express');
 const router = express.Router();
-const { authenticate } = require('../middlewares/auth');
-const controller = require('../controller/user');
+const { authenticate, verifyRole } = require('../middlewares/auth');
+const controller = require('../controllers/user');
 
+const adminOnly = verifyRole(['Admin']);
+const highRole = verifyRole(['Admin', 'Super Admin']);
+const breederRole = verifyRole(['Breeder']);
 
 router.get('/profile', authenticate, controller.profile);
 router.post('/register', controller.register);
@@ -12,8 +15,17 @@ router.patch('/update-password', authenticate, controller.updatePassword);
 router.patch('/update-profile', authenticate, controller.updateProfile);
 router.delete('/delete', authenticate, controller.deleteAccount);
 
-// router.get('/all', authenticate, controller.all);
-// router.get('/all/:id', controller.allById);
-// router.get('/all/:id/:name', controller.allByIdAndName);
+router.get('/breeder/profile', authenticate, breederRole, controller.getBreederProfile);
+
+router.get('/manage/profile', authenticate, highRole, controller.getAllProfiles);
+router.post('/manage/profile', authenticate, adminOnly, controller.manageCreateProfile);
+router.get('/manage/profile/:id', authenticate, highRole, controller.getProfileById);
+router.patch('/manage/profile/:id', authenticate, highRole, controller.manageUpdateProfile);
+router.delete('/manage/profile/:id', authenticate, highRole, controller.manageDeleteProfile);
+
+router.get('/manage/breeder/profile', authenticate, highRole, controller.getAllBreederProfiles);
+router.get('/manage/breeder/profile/:id', authenticate, highRole, controller.getBreederProfileById);
+router.patch('/manage/breeder/profile/:id', authenticate, highRole, controller.manageUpdateBreederProfile);
+router.delete('/manage/breeder/profile/:id', authenticate, highRole, controller.manageDeleteBreederProfile);
 
 module.exports = router;
